--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://ekrpo.github.io/laugher-client",
   "name": "client",
   "version": "0.1.0",
   "proxy": "https://laugher-server.onrender.com/",
@@ -9,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
+    "gh-pages": "^6.1.1",
     "howler": "^2.2.4",
     "react": "^18.2.0",
     "react-audio-voice-recorder": "^2.2.0",
@@ -25,6 +27,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
