--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "homepage": "https://ekrpo.github.io/laugher-client",
   "name": "client",
   "version": "0.1.0",
-  "proxy": "https://laugher-server.onrender.com/",
+  "proxy": "https://laugher-server.onrender.com",
   "private": true,
   "dependencies": {
+    "@fvilers/disable-react-devtools": "^1.3.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -27,8 +27,6 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
